Changed Styles , Problem of refreshing user and user management was invisible also solved

--- a/DataBinFE/src/components/charts/style.css
+++ b/DataBinFE/src/components/charts/style.css
@@ -44,4 +44,13 @@
     height: 1.6rem;
 }
 
- 
+
+.p-datatable .p-column-header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.p-datatable.p-datatable .p-datatable-tbody>tr>td{
+   text-align: center;
+}
